--- a/lms/static/sass/partials/lms/theme/custom/_variables.scss
+++ b/lms/static/sass/partials/lms/theme/custom/_variables.scss
@@ -18,6 +18,9 @@ $header-bg: #fff;
 $header-nav-link-color: $base-color;
 $header-nav-link-color-hover: darken($header-nav-link-color, 20%);
 $header-vertical-padding: 30px;
+$header-login-bg: #fff;
+$header-register-bg: $base-color;
+$hamburger-btn-color: $base-color;
 
 // promo banner
 $promo-title-margin: 0;
